<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BBC News Reader v1.0</string>
    <string name="login_title">BBC News Reader</string>
    <string name="login">Login</string>
    <string name="enter_email">Email address:</string>
    <string name="your_email">Your email:</string>
    <string name="enter_password">Password:</string>
    <string name="your_name">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="your_profile">Profile</string>
    <string name="NewsReader">News Reader</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="delete">Do you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open" />
    <string name="close" />

</resources>